--- a/hypertext-narrative/bio.html
+++ b/hypertext-narrative/bio.html
@@ -12,6 +12,33 @@
     <link rel="stylesheet" type="text/css" href="styles/style.css" media="screen" />
 </head>
 <body>
+    <div class="image-container">
+        <img src="https://cdn.eso.org/images/screen/eso0908a.jpg" alt="Pluto's surface">
+        <div class="overlay-text">
+            <nav style="--bs-breadcrumb-divider: '>';" aria-label="breadcrumb">
+                <ol class="breadcrumb">
+                    <li class="breadcrumb-item active mb-5"><a href="home.html">Home</a></li>
+                </ol>
+            </nav>
+            <h3 class="mt-5" data-size="50">
+                <a data-size="50"
+                    href="https://solarsystem.nasa.gov/planets/dwarf-planets/pluto/in-depth/#:~:text=With%20a%20radius%20of%20715,units%20away%20from%20the%20Sun.">Biography</a>
+            </h3>
+            <ul data-size="50">
+                <li>Discovered on: 02/18/1930</li>
+                <li>Discovered by: Clyde Tombaugh</li>
+                <li>Distance from sun: 3.7 billion miles</li>
+                <li>Rotation period: ~153 hours</li>
+                <li>Revolution period: ~248 years</li>
+                <li>Radius: 715 miles</li>
+                <li>No. of moons: 5 (Charon, Nix, Hydra, Kerberos, Styx)</li>
+                <li>Rings: none</li>
+                <li>Named for: Roman god of the underworld</li>
+                <li>Year booted from the planet fraternity: 2006</li>
+                <li>Official classification: Dwarf Planet</li>
+            </ul>  
+        </div>
+    </div>
     
 </body>
 </html>
