--- a/hypertext-narrative/bio.html
+++ b/hypertext-narrative/bio.html
@@ -17,7 +17,7 @@
         <div class="overlay-text">
             <nav style="--bs-breadcrumb-divider: '>';" aria-label="breadcrumb">
                 <ol class="breadcrumb">
-                    <li class="breadcrumb-item active mb-5"><a href="home.html">Home</a></li>
+                    <li class="breadcrumb-item active mb-5"><a href="index.html">Home</a></li>
                 </ol>
             </nav>
             <h3 class="mt-5" data-size="50">
