added animation to bio
was able to add some animation on bio page - text moves to the left side of the screen

--- a/hypertext-narrative/bio.html
+++ b/hypertext-narrative/bio.html
@@ -9,11 +9,13 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Allura&family=Oleo+Script&display=swap" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="styles/style.css" media="screen" />
+    <link rel="stylesheet" type="text/css" href="styles/style-bio.css" media="screen" />
 </head>
 <body>
     <div class="image-container">
         <img src="https://cdn.eso.org/images/screen/eso0908a.jpg" alt="Pluto's surface">
+
+    </div>
         <div class="overlay-text">
             <nav style="--bs-breadcrumb-divider: '>';" aria-label="breadcrumb">
                 <ol class="breadcrumb">
@@ -24,7 +26,7 @@
                 <a data-size="50"
                     href="https://solarsystem.nasa.gov/planets/dwarf-planets/pluto/in-depth/#:~:text=With%20a%20radius%20of%20715,units%20away%20from%20the%20Sun.">Biography</a>
             </h3>
-            <ul data-size="50">
+            <ul class="stretch-text" data-size="50">
                 <li>Discovered on: 02/18/1930</li>
                 <li>Discovered by: Clyde Tombaugh</li>
                 <li>Distance from sun: 3.7 billion miles</li>
@@ -38,7 +40,5 @@
                 <li>Official classification: Dwarf Planet</li>
             </ul>  
         </div>
-    </div>
-    
 </body>
 </html>
