--- a/hypertext-narrative/bio.html
+++ b/hypertext-narrative/bio.html
@@ -19,10 +19,10 @@
         <div class="overlay-text">
             <nav style="--bs-breadcrumb-divider: '>';" aria-label="breadcrumb">
                 <ol class="breadcrumb">
-                    <li class="breadcrumb-item active mb-5 freeze-tag"><a href="index.html">Home</a></li>
+                    <li class="breadcrumb-item active freeze-tag"><a href="index.html">Home</a></li>
                 </ol>
             </nav>
-            <h3 class="mt-5" data-size="50">
+            <h3 data-size="50">
                 <a data-size="50"
                     href="https://solarsystem.nasa.gov/planets/dwarf-planets/pluto/in-depth/#:~:text=With%20a%20radius%20of%20715,units%20away%20from%20the%20Sun.">Biography</a>
             </h3>
