--- a/hypertext-narrative/bio.html
+++ b/hypertext-narrative/bio.html
@@ -24,7 +24,7 @@
             </nav>
             <h3 data-size="50">
                 <a data-size="50"
-                    href="https://solarsystem.nasa.gov/planets/dwarf-planets/pluto/in-depth/#:~:text=With%20a%20radius%20of%20715,units%20away%20from%20the%20Sun.">Biography</a>
+                    href="https://solarsystem.nasa.gov/planets/dwarf-planets/pluto/in-depth/#:~:text=With%20a%20radius%20of%20715,units%20away%20from%20the%20Sun." target="_blank">Biography</a>
             </h3>
             <ul class="stretch-text" data-size="50">
                 <li>Discovered on: 02/18/1930</li>
